# haskell-in-haskell

./: LICENSE  README.md  lang.cabal
app/: Main.hs
hs-in-hs/app/: Main.hs
src/: Example.hs  Lexer.hs  Ourlude.hs
tests/: test.hs
