cabal-version:       >=1.10

name:                lang
version:             1.0.0
license-file:        LICENSE
author:              Nithin
maintainer:         
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable lang
  main-is:             Main.hs
  build-depends:       base >= 4.17 && < 4.21
                     , lang  
                     , pretty-simple >=4.0 && <4.1
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  hs-source-dirs:      app


library
  build-depends:       base >= 4.17 && < 4.21
                     , containers >=0.6 && <0.7
                     , mtl >=2.2 && <2.3
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  exposed-modules:     Example
                     , Ourlude
                     , Lexer
  ghc-options:         -Wall
  hs-source-dirs:      src


test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: test.hs
  build-depends:
      base >= 4 && < 5
    , tasty >= 0.7
    , tasty-hunit >= 0.10
    , lang
    
